--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     Game
 </body>
 <script>
-    document.body.style.backgroundColor = "pink";
+    document.body.style.backgroundColor = "brown";
 
     function showlist(list) {
         for (let i = 0; i < list.length; i++) {
