--- a/Tourist_Bureau_Project/hikes.html
+++ b/Tourist_Bureau_Project/hikes.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hikes</title>
+    <link rel="stylesheet" href="./style/style.css">
+    <script src="./data/HikingPage/hiking.js"></script>
+    <script src="./scripts/main.js"></script>
+    <script src="./scripts/hikes.js"></script>
 </head>
 <body>
-    
+    <script> document.write(nav); </script>
+    <h1>Hikes</h1>
+    <select id="hikeSelect">
+        <option value="">Select One:</option>
+    </select>
+    <div id="hikeDiv">?
+        <img src="./data/HikingPage/deep_blue_1.png" class="card-img-top" alt="...">
+        <img src="./data/HikingPage/deep_blue_2.png" class="card-ig-top" alt="...">
+    </div>
 </body>
 </html>
